# TinyFFR

./: .gitignore  .gitmodules  BUILDING.md  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  LICENSE.md  README.md  THIRD_PARTY_NOTICES.md  TinyFFR.sln  TinyFFR.sln.DotSettings  TinyFFR.slnx  third_party_versions.txt
.github/workflows/: build_native_libs.yml  build_nuget_package.yml  create_nuget_package.yml  create_nuget_packages.yml
Documentation/: documentation_instructions.txt  mkdocs.yml  setup_instructions.txt
Documentation/includes/: acronym_definitions.md
Documentation/output/: 404.html  index.html  sitemap.xml
Documentation/public_html/: 404.html  index.html  sitemap.xml
Documentation/source/: changelog.md  index.md
Documentation/theme_overrides/: main.html.disabled
Integrations/TinyFFR.Avalonia/: TinyFFR.Avalonia.csproj  TinyFfrAvaloniaExtensions.cs  TinyFfrSceneView.cs
Integrations/TinyFFR.Integrations.Common/: GlobalSetup.cs  TinyFFR.Integrations.Common.csproj
Integrations/TinyFFR.WinForms/: TinyFFR.WinForms.csproj  TinyFfrSceneView.Designer.cs  TinyFfrSceneView.cs  TinyFfrWinFormsExtensions.cs
Integrations/TinyFFR.Wpf/: TinyFFR.Wpf.csproj  TinyFfrSceneView.cs  TinyFfrWpfExtensions.cs
LocalDevTesting/: Program.cs
NupkgTesting/: AssetTestConstants.cs  NupkgTesting.csproj  Program.cs
Publishing/: Directory.Build.props  PACKAGE_README.md  release_steps.txt
Publishing/TinyFFR.Avalonia.NuGet/: Class1.cs  TinyFFR.Avalonia.NuGet.csproj
Publishing/TinyFFR.NuGet/: Directory.Build.props  Egodystonic.TinyFFR.targets  README.md  TinyFFR.NuGet.csproj
Publishing/TinyFFR.WinForms.NuGet/: TinyFFR.WinForms.NuGet.csproj
Publishing/TinyFFR.Wpf.NuGet/: TinyFFR.Wpf.NuGet.csproj
TestProject/: Program.cs  TestProject.csproj
Testing/LocalDevTesting/: LocalDevTesting.csproj  TestMain.cs
Testing/ManualIntegrationTestRunner/: ManualIntegrationTestRunner.csproj  Program.cs
Testing/NupkgTesting/: AssetTestConstants.cs  NupkgTesting.csproj  Program.cs
Testing/TestCommon/: CommonTestAssets.cs  CommonTestSupportFunctions.cs  DefaultCameraInputHandler.cs  KnownTestAsset.cs  TestCommon.csproj
Testing/TinyFFR.Tests/: ByteSpanSerializationTestUtils.cs  ConfigStructTestUtils.cs  GlobalSetup.cs  GlobalSuppressions.cs  OrientationUtils.cs  TestUtils.cs  TinyFFR.Tests.csproj  TinyFFR.Tests.csproj.DotSettings
Testing/TinyFFR.Tests.Integrations.Avalonia/: App.axaml  TinyFFR.Tests.Integrations.Avalonia.csproj
Testing/TinyFFR.Tests.Integrations.Avalonia.Desktop/: TinyFFR.Tests.Integrations.Avalonia.Desktop.csproj
Testing/TinyFFR.Tests.Integrations.WinForms/: TinyFFR.Tests.Integrations.WinForms.csproj
Testing/TinyFFR.Tests.Integrations.Wpf/: App.xaml.cs  TinyFFR.Tests.Integrations.Wpf.csproj
TinyFFR/: Directory.Build.props  FactoryConfig.cs  GlobalExtensions.cs  GlobalSetup.cs  GlobalUsings.cs  IByteSpanSerializable.cs  ISpanConvertible.cs  ITffrFactory.cs  IToleranceEquatable.cs  ITrackedDisposable.cs  ImplementationNotes.txt  InvalidObjectException.cs  TffrFactory.cs  TinyFFR - Backup.csproj  TinyFFR.csproj  TinyFFR.csproj.DotSettings
TinyFFR.Native/: CMakeLists.txt  TinyFFR.Native.cpp  TinyFFR.Native.vcxproj  TinyFFR.Native.vcxproj.filters  pch.h
TinyFFR.Native/tffr/headers/: interop_bool.h  interop_result.h  interop_utils.h  native_impl_init.h  utils_and_constants.h
TinyFFR.Native/tffr/headers/assets/: native_impl_asset_loader.h  native_impl_render_assets.h
TinyFFR.Native/tffr/headers/environment/: native_impl_display.h  native_impl_loop.h  native_impl_monitor.h  native_impl_window.h  window_factory.h
TinyFFR.Native/tffr/headers/scene/: native_impl_camera.h  native_impl_render.h  native_impl_scene.h
TinyFFR.Native/tffr/headers/scene/camera/: native_impl_camera.h
TinyFFR.Native/tffr/headers/scene/lights/: native_impl_lights.h
TinyFFR.Native/tffr/headers/scene/objects/: native_impl_objects.h
TinyFFR.Native/tffr/impl/: interop_bool.cpp  interop_result.cpp  interop_utils.cpp  macos_functions.mm  native_impl_init.cpp  tffr_string.cpp
TinyFFR.Native/tffr/impl/assets/: native_impl_asset_loader.cpp  native_impl_render_assets.cpp
TinyFFR.Native/tffr/impl/environment/: native_impl_display.cpp  native_impl_loop.cpp  native_impl_monitor.cpp  native_impl_window.cpp  window_factory.cpp
TinyFFR.Native/tffr/impl/scene/: macos_functions.mm  native_impl_camera.cpp  native_impl_render.cpp  native_impl_scene.cpp
TinyFFR.Native/tffr/impl/scene/camera/: native_impl_camera.cpp
TinyFFR.Native/tffr/impl/scene/lights/: native_impl_lights.cpp
TinyFFR.Native/tffr/impl/scene/objects/: native_impl_objects.cpp
TinyFFR.Tests/: GlobalSetup.cs  GlobalUsings.cs  OrientationUtils.cs  Temp.cs  TestUtils.cs  TinyFFR.Tests.csproj  TinyFFR.Tests.csproj.DotSettings
TinyFFR.Tests/IntegrationTests/: LocalAssetImportTest.cs  LocalCuboidRenderTest.cs  LocalDependencyTest.cs  LocalDiscsRenderTest.cs  LocalDisposalProtectionTest.cs  LocalInputTest.cs  LocalLoopTimingTest.cs  LocalMeshPolygonGroupTest.cs  LocalResourceGroupTest.cs  LocalResourceNamingTest.cs  LocalShadowsTest.cs  LocalWindowTest.cs  NativeCuboidRenderTest.cs  NativeInputTest.cs  NativeLoopTimingTest.cs  NativeWindowTest.cs
TinyFFR.Tests/Interop/: InteropBool.cs
TinyFFR.Tests/LinearAlgebra/: Angle.cs
TinyFFR.Tests/Math/: Angle.Operations.cs  Angle.cs  Direction.Operations.cs  Direction.cs  Fraction.Operations.cs  Fraction.cs  IVect.cs  Location.Operations.cs  Location.cs  MathUtils.cs  PercentageUtils.cs  Real.cs  Rotation.Operations.cs  Rotation.cs  Vect.Operations.cs  Vect.cs  VectExtensions.cs
TinyFFR.Tests/Properties/: launchSettings.json
TinyFFR.Tests/Resources/: MockResources.cs  ResourceDependencyTracker.cs
TinyFFR.Tests/Util/: ColorVect.cs  OneToManyEnumerator.cs  RandomUtils.cs  TypedReferentIterator.cs
TinyFFR.Tests/World/: Scene.cs
TinyFFR/Assets/: Asset.cs  AssetConfig.cs  AssetGroup.cs  IAssetFactory.cs  IAssetLoader.cs  IBuiltInTexturePathLibrary.cs  IModelImplProvider.cs  Model.cs  ModelConfig.cs  TypeDefinitions.cs
TinyFFR/Environment/: NativeWindowFactory.cs  Window.cs  (+2 more)
(+1898 files in other folders)
